--- a/templates/reckon/index.html
+++ b/templates/reckon/index.html
@@ -90,7 +90,7 @@
                                     
                                     <div class="text">
                                         <span>Send us a Email</span>
-                                        <p><a href="#">support@jibdara.com</a></p>
+                                        <p><a href="#">info@kw-reckon.com</a></p>
                                     </div>
                                 </li>
                                 
@@ -100,8 +100,8 @@
                                     </div>
                                     
                                     <div class="text">
-                                        <span>184 Collins Street West</span>
-                                        <p>Victoria, United States</p>
+                                        <span>Kuwait City</span>
+                                        <p>Kuwait</p>
                                     </div>
                                 </li>
                                    
@@ -112,7 +112,7 @@
                                     
                                     <div class="text">
                                         <span>Have any question?</span>
-                                        <p><a href="#">+048545888556</a></p>
+                                        <p><a href="#">+965 50009777</a></p>
                                     </div>
                                 </li>
                             </ul>
@@ -317,11 +317,11 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
                         <div class="welcome-text">
-                            <span>Welcome to Jibdara consulting</span>
-                            <h4>Providing best business solution by 100+ years of total experience.</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <span>Welcome Reckon</span>
+                            <h4>Business Advisories</h4>
+                            <p>Maintaining an accurate accounting record is critical part of any business, so the success of your business depends on those records. Accounting records help you evaluate your business performance by identifying any weakness in the operation this allowing you to take timely corrective action. </p>
                             
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                            <p> Owning and operating your own business requires you to perform many tasks to keep your business operating well. While you need to stay involved in many of the day-to-day responsibilities of your business, it can be advantageous to outsource the accounting and bookkeeping work to experts.</p>
                             
                             <div class="gq-au-btn">
                                 <a href="get-quote.html" class="btn btn-primary mr-20">Get a Quote</a>
@@ -332,7 +332,7 @@
                     
                     <div class="col-lg-6 col-md-12">
                         <div class="welcome-video">
-                            <a class="popup-youtube" href="https://www.youtube.com/watch?v=bk7McNUjWgw"><img src="assets/img/play.png" alt="play"></a>
+                            <a class="popup-youtube" href="https://www.youtube.com/watch?v=f8MBSO-kcOE"><img src="{% static 'assets/img/play.png'%}" alt="play"></a>
                         </div>
                     </div>
                 </div>
@@ -346,7 +346,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
                         <div class="single-about">
-                            <img src="assets/img/1.png" alt="icon">
+                            <img src="{% static 'assets/img/1.png'%}" alt="icon">
                             
                             <h3>Our Story</h3>
                             <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur consequuntur magni dolores eos qui ratione.</p>
@@ -361,7 +361,7 @@
                     
                     <div class="col-lg-4 col-md-6">
                         <div class="single-about">
-                            <img src="assets/img/2.png" alt="icon">
+                            <img src="{% static 'assets/img/2.png'%}" alt="icon">
                             
                             <h3>Our Mission</h3>
                             <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur consequuntur magni dolores eos qui ratione.</p>
@@ -376,7 +376,7 @@
                     
                     <div class="col-lg-4 col-md-6 offset-lg-0 offset-md-3">
                         <div class="single-about">
-                            <img src="assets/img/3.png" alt="icon">
+                            <img src="{% static 'assets/img/3.png'%}" alt="icon">
                             
                             <h3>Our Vission</h3>
                             <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur consequuntur magni dolores eos qui ratione.</p>
